--- a/portfolio_oss.ipynb
+++ b/portfolio_oss.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,15 +26,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "# read data from table to datatframe with Month form 201801\n",
     "table = 'mat_view_cc_kpi_m'\n",
     "with pg.connect(database='ktc', user='postgres', password=pwd) as con:\n",
-    "    df = pd.read_sql('select * from ' + table + ' where \"Month\"::bigint >= 201801', con = con)\n",
-    "    con.close()"
+    "    df = pd.read_sql('select * from ' + table + ' where \"Month\"::bigint >= 201801', con = con)"
    ]
   },
   {
@@ -54,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +128,7 @@
        "Tele    Telesales     3,677   4,752   5,913   4,476"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -148,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -223,7 +222,7 @@
        "Tele    Telesales    1,472  1,544  1,931  1,539"
       ]
      },
-     "execution_count": 120,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -241,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -316,7 +315,7 @@
        "Tele    Telesales      40%    32%    33%    34%"
       ]
      },
-     "execution_count": 141,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -334,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -409,7 +408,7 @@
        "Tele    Telesales    52,739  52,141  50,016  46,648"
       ]
      },
-     "execution_count": 138,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -427,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -502,7 +501,7 @@
        "Tele    Telesales      86%    86%    81%    37%"
       ]
      },
-     "execution_count": 134,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -513,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -588,7 +587,7 @@
        "Tele    Telesales      86%    86%    81%    37%"
       ]
      },
-     "execution_count": 137,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -599,16 +598,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 235,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x19c70f4a8>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x12bf14d30>"
       ]
      },
-     "execution_count": 235,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -628,8 +627,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Multiple aggregrate"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 251,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -653,156 +659,150 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th></th>\n",
        "      <th>Month</th>\n",
-       "      <th>201801</th>\n",
-       "      <th>201802</th>\n",
-       "      <th>201803</th>\n",
-       "      <th>201804</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>channel</th>\n",
        "      <th>channel_sub</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
+       "      <th>finalized</th>\n",
+       "      <th>appr_new</th>\n",
+       "      <th>active60</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th rowspan=\"4\" valign=\"top\">OSS</th>\n",
-       "      <th rowspan=\"2\" valign=\"top\">Direct</th>\n",
-       "      <th>finalized</th>\n",
-       "      <td>17,962</td>\n",
-       "      <td>21,490</td>\n",
-       "      <td>21,146</td>\n",
-       "      <td>16,711</td>\n",
+       "      <th>0</th>\n",
+       "      <td>201801</td>\n",
+       "      <td>OSS</td>\n",
+       "      <td>Direct</td>\n",
+       "      <td>17962</td>\n",
+       "      <td>6694</td>\n",
+       "      <td>4051</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>appr_new</th>\n",
-       "      <td>6,694</td>\n",
-       "      <td>8,017</td>\n",
-       "      <td>7,741</td>\n",
-       "      <td>6,099</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th rowspan=\"2\" valign=\"top\">OSS_Tele</th>\n",
-       "      <th>finalized</th>\n",
-       "      <td>1,184</td>\n",
-       "      <td>1,275</td>\n",
-       "      <td>1,158</td>\n",
-       "      <td>1,495</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>appr_new</th>\n",
+       "      <th>1</th>\n",
+       "      <td>201801</td>\n",
+       "      <td>OSS</td>\n",
+       "      <td>OSS_Tele</td>\n",
+       "      <td>1184</td>\n",
        "      <td>530</td>\n",
+       "      <td>374</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>201801</td>\n",
+       "      <td>Tele</td>\n",
+       "      <td>Telesales</td>\n",
+       "      <td>3677</td>\n",
+       "      <td>1472</td>\n",
+       "      <td>1270</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>201802</td>\n",
+       "      <td>OSS</td>\n",
+       "      <td>Direct</td>\n",
+       "      <td>21490</td>\n",
+       "      <td>8017</td>\n",
+       "      <td>4987</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>201802</td>\n",
+       "      <td>OSS</td>\n",
+       "      <td>OSS_Tele</td>\n",
+       "      <td>1275</td>\n",
        "      <td>496</td>\n",
+       "      <td>374</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>201802</td>\n",
+       "      <td>Tele</td>\n",
+       "      <td>Telesales</td>\n",
+       "      <td>4752</td>\n",
+       "      <td>1544</td>\n",
+       "      <td>1329</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>201803</td>\n",
+       "      <td>OSS</td>\n",
+       "      <td>Direct</td>\n",
+       "      <td>21146</td>\n",
+       "      <td>7741</td>\n",
+       "      <td>4236</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>201803</td>\n",
+       "      <td>OSS</td>\n",
+       "      <td>OSS_Tele</td>\n",
+       "      <td>1158</td>\n",
        "      <td>459</td>\n",
+       "      <td>300</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>201803</td>\n",
+       "      <td>Tele</td>\n",
+       "      <td>Telesales</td>\n",
+       "      <td>5913</td>\n",
+       "      <td>1931</td>\n",
+       "      <td>1563</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>201804</td>\n",
+       "      <td>OSS</td>\n",
+       "      <td>Direct</td>\n",
+       "      <td>16711</td>\n",
+       "      <td>6099</td>\n",
+       "      <td>1392</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>201804</td>\n",
+       "      <td>OSS</td>\n",
+       "      <td>OSS_Tele</td>\n",
+       "      <td>1495</td>\n",
        "      <td>607</td>\n",
+       "      <td>189</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th rowspan=\"2\" valign=\"top\">Tele</th>\n",
-       "      <th rowspan=\"2\" valign=\"top\">Telesales</th>\n",
-       "      <th>finalized</th>\n",
-       "      <td>3,677</td>\n",
-       "      <td>4,752</td>\n",
-       "      <td>5,913</td>\n",
-       "      <td>4,476</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>appr_new</th>\n",
-       "      <td>1,472</td>\n",
-       "      <td>1,544</td>\n",
-       "      <td>1,931</td>\n",
-       "      <td>1,539</td>\n",
+       "      <th>11</th>\n",
+       "      <td>201804</td>\n",
+       "      <td>Tele</td>\n",
+       "      <td>Telesales</td>\n",
+       "      <td>4476</td>\n",
+       "      <td>1539</td>\n",
+       "      <td>577</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "Month                          201801  201802  201803  201804\n",
-       "channel channel_sub                                          \n",
-       "OSS     Direct      finalized  17,962  21,490  21,146  16,711\n",
-       "                    appr_new    6,694   8,017   7,741   6,099\n",
-       "        OSS_Tele    finalized   1,184   1,275   1,158   1,495\n",
-       "                    appr_new      530     496     459     607\n",
-       "Tele    Telesales   finalized   3,677   4,752   5,913   4,476\n",
-       "                    appr_new    1,472   1,544   1,931   1,539"
+       "     Month channel channel_sub  finalized  appr_new  active60\n",
+       "0   201801     OSS      Direct      17962      6694      4051\n",
+       "1   201801     OSS    OSS_Tele       1184       530       374\n",
+       "2   201801    Tele   Telesales       3677      1472      1270\n",
+       "3   201802     OSS      Direct      21490      8017      4987\n",
+       "4   201802     OSS    OSS_Tele       1275       496       374\n",
+       "5   201802    Tele   Telesales       4752      1544      1329\n",
+       "6   201803     OSS      Direct      21146      7741      4236\n",
+       "7   201803     OSS    OSS_Tele       1158       459       300\n",
+       "8   201803    Tele   Telesales       5913      1931      1563\n",
+       "9   201804     OSS      Direct      16711      6099      1392\n",
+       "10  201804     OSS    OSS_Tele       1495       607       189\n",
+       "11  201804    Tele   Telesales       4476      1539       577"
       ]
      },
-     "execution_count": 251,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_gr[['finalized', 'appr_new']].sum().stack().unstack(0).applymap(\"{:,d}\".format)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 274,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "i = df_gr[['finalized', 'appr_new']].sum().stack()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 277,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "i.index.names = ['Month','channel','channel_sub','kpi']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 278,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Month   channel  channel_sub  kpi      \n",
-       "201801  OSS      Direct       finalized    17962\n",
-       "                              appr_new      6694\n",
-       "                 OSS_Tele     finalized     1184\n",
-       "                              appr_new       530\n",
-       "        Tele     Telesales    finalized     3677\n",
-       "                              appr_new      1472\n",
-       "201802  OSS      Direct       finalized    21490\n",
-       "                              appr_new      8017\n",
-       "                 OSS_Tele     finalized     1275\n",
-       "                              appr_new       496\n",
-       "        Tele     Telesales    finalized     4752\n",
-       "                              appr_new      1544\n",
-       "201803  OSS      Direct       finalized    21146\n",
-       "                              appr_new      7741\n",
-       "                 OSS_Tele     finalized     1158\n",
-       "                              appr_new       459\n",
-       "        Tele     Telesales    finalized     5913\n",
-       "                              appr_new      1931\n",
-       "201804  OSS      Direct       finalized    16711\n",
-       "                              appr_new      6099\n",
-       "                 OSS_Tele     finalized     1495\n",
-       "                              appr_new       607\n",
-       "        Tele     Telesales    finalized     4476\n",
-       "                              appr_new      1539\n",
-       "dtype: int64"
-      ]
-     },
-     "execution_count": 278,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "i"
+    "df_gr.agg({'finalized':sum, 'appr_new':sum, 'active60':sum}).reset_index()"
    ]
   },
   {
