chisel goodness to fit test

--- a/portfolio_oss.ipynb
+++ b/portfolio_oss.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -449,137 +449,47 @@
    "metadata": {},
    "source": [
     "##### Chisq-test\n",
-    "Goodness to fit test top reject between last month whith last 2 month as base distribution"
+    "__Goodness to fit test__ top reject between last month whith last 2 month as base distribution"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# create cross tabulation data for calculation\n",
-    "top5_decline_monthly = \\\n",
-    "(df.query('channel == \"OSS\" and result == \"R\"')\n",
-    " .groupby(['month', 'result_description']).size().unstack(0)\n",
-    " .sort_values('201805', ascending = False).head(5).stack().unstack(0))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 95,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th>result_description</th>\n",
-       "      <th>D24</th>\n",
-       "      <th>D09</th>\n",
-       "      <th>D11</th>\n",
-       "      <th>D01</th>\n",
-       "      <th>D30</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>month</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>201801</th>\n",
-       "      <td>3115.0</td>\n",
-       "      <td>1403.0</td>\n",
-       "      <td>1780.0</td>\n",
-       "      <td>667.0</td>\n",
-       "      <td>641.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>201802</th>\n",
-       "      <td>3483.0</td>\n",
-       "      <td>1705.0</td>\n",
-       "      <td>1956.0</td>\n",
-       "      <td>904.0</td>\n",
-       "      <td>749.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>201803</th>\n",
-       "      <td>3554.0</td>\n",
-       "      <td>1780.0</td>\n",
-       "      <td>1509.0</td>\n",
-       "      <td>1075.0</td>\n",
-       "      <td>834.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>201804</th>\n",
-       "      <td>2712.0</td>\n",
-       "      <td>1237.0</td>\n",
-       "      <td>1205.0</td>\n",
-       "      <td>766.0</td>\n",
-       "      <td>664.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>201805</th>\n",
-       "      <td>3521.0</td>\n",
-       "      <td>1681.0</td>\n",
-       "      <td>1504.0</td>\n",
-       "      <td>974.0</td>\n",
-       "      <td>806.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "result_description     D24     D09     D11     D01    D30\n",
-       "month                                                    \n",
-       "201801              3115.0  1403.0  1780.0   667.0  641.0\n",
-       "201802              3483.0  1705.0  1956.0   904.0  749.0\n",
-       "201803              3554.0  1780.0  1509.0  1075.0  834.0\n",
-       "201804              2712.0  1237.0  1205.0   766.0  664.0\n",
-       "201805              3521.0  1681.0  1504.0   974.0  806.0"
-      ]
-     },
-     "execution_count": 95,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "top5_decline_monthly"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Power_divergenceResult(statistic=561.7335998079014, pvalue=2.9589837270260944e-120)\n",
+      "result_description     D24     D09     D11     D01    D30\n",
+      "month                                                    \n",
+      "201801              3171.0  1426.0  1789.0   673.0  659.0\n",
+      "201802              3543.0  1734.0  1971.0   909.0  763.0\n",
+      "201803              3599.0  1827.0  1517.0  1083.0  856.0\n",
+      "201804              2780.0  1266.0  1214.0   774.0  676.0\n",
+      "201805              3598.0  1723.0  1515.0   979.0  827.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# create cross tabulation data for calculation\n",
+    "top5_decline_monthly = \\\n",
+    "(df.query('channel == \"OSS\" and result == \"R\"')\n",
+    " .groupby(['month', 'result_description']).size().unstack(0)\n",
+    " .sort_values('201805', ascending = False).head(5).stack().unstack(0))\n",
+    "print(top5_decline_monthly)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Power_divergenceResult(statistic=568.315004708985, pvalue=1.1144216438232822e-121)\n",
       "Reject H0 : the distribution are difference\n"
      ]
     }
@@ -602,111 +512,50 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 97,
+   "cell_type": "raw",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th>result_description</th>\n",
-       "      <th>D24</th>\n",
-       "      <th>D09</th>\n",
-       "      <th>D11</th>\n",
-       "      <th>D01</th>\n",
-       "      <th>D30</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>month</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>201801</th>\n",
-       "      <td>3115</td>\n",
-       "      <td>1403</td>\n",
-       "      <td>1780</td>\n",
-       "      <td>667</td>\n",
-       "      <td>641</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>201802</th>\n",
-       "      <td>3483</td>\n",
-       "      <td>1705</td>\n",
-       "      <td>1956</td>\n",
-       "      <td>904</td>\n",
-       "      <td>749</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>201803</th>\n",
-       "      <td>3554</td>\n",
-       "      <td>1780</td>\n",
-       "      <td>1509</td>\n",
-       "      <td>1075</td>\n",
-       "      <td>834</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>201804</th>\n",
-       "      <td>2712</td>\n",
-       "      <td>1237</td>\n",
-       "      <td>1205</td>\n",
-       "      <td>766</td>\n",
-       "      <td>664</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>201805</th>\n",
-       "      <td>3521</td>\n",
-       "      <td>1681</td>\n",
-       "      <td>1504</td>\n",
-       "      <td>974</td>\n",
-       "      <td>806</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "result_description   D24   D09   D11   D01  D30\n",
-       "month                                          \n",
-       "201801              3115  1403  1780   667  641\n",
-       "201802              3483  1705  1956   904  749\n",
-       "201803              3554  1780  1509  1075  834\n",
-       "201804              2712  1237  1205   766  664\n",
-       "201805              3521  1681  1504   974  806"
-      ]
-     },
-     "execution_count": 97,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
     "# another way to count top 5 rejects by month\n",
     "(pd.crosstab(df.query('channel == \"OSS\" and result == \"R\"')['month'], \n",
     "            df.query('channel == \"OSS\" and result == \"R\"')['result_description'])\n",
     " .sort_values(by = '201805', axis = 1, ascending = False).transpose().head().transpose())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "prove chisq test of indepent formular\n",
+    "\n",
+    "$\\chi^2 = \\sum_{i=0}^n \\frac{[O-E]^2}{E}$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "568.315004708985"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "((top5_decline_monthly.loc['201805'] - top5_decline_monthly.loc['201804'])**2/top5_decline_monthly.loc['201804']).sum()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Chisq-test\n",
+    "__Independent test__ between age and region"
    ]
   },
   {
