--- a/cluster_learning.ipynb
+++ b/cluster_learning.ipynb
@@ -4,16 +4,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/data/data/com.termux/files/usr/lib/python3.6/site-packages/sklearn/externals/joblib/_multiprocessing_helpers.py:28: UserWarning: This platform lacks a functioning sem_open implementation, therefore, the required synchronization primitives needed will not function, see issue 3770..  joblib will operate in serial mode\n",
-      "  warnings.warn('%s.  joblib will operate in serial mode' % (e,))\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
@@ -22,25 +13,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = make_blobs(n_samples = 200, n_features = 2, centers = 4, cluster_std = 1.6, random_state = 50)"
+    "points, centers = make_blobs(n_samples = 200, n_features = 2, centers = 4, cluster_std = 1.6, random_state = 50)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "numpy.ndarray"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "points = data[0]"
+    "type(points)\n",
+    "type(centers)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -52,7 +55,7 @@
        " 14.719437557000862)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -68,9 +71,9 @@
     }
    ],
    "source": [
-    "plt.scatter(data[0][:,0], \n",
-    "            data[0][:,1],\n",
-    "            c=data[1],\n",
+    "plt.scatter(points[:,0], \n",
+    "            points[:,1],\n",
+    "            c=centers,\n",
     "            cmap='viridis')\n",
     "plt.axis('equal')"
    ]
@@ -333,7 +336,7 @@
     "    c_x = kmeans.cluster_centers_[:,0]\n",
     "    c_y = kmeans.cluster_centers_[:,1]\n",
     "    plt.scatter(c_x, c_y, c='red')\n",
-    "    plt.title('n = {:d}, score = {:.5f} Silhouette score {:.5f}'.format(i, iner, s))"
+    "    plt.title('n = {:d}, ineria = {:.5f} Silhouette score {:.5f}'.format(i, iner, s))"
    ]
   },
   {
